--- a/dynamic_report.Rmd
+++ b/dynamic_report.Rmd
@@ -15,14 +15,14 @@ body {
 
 h1 {
    color: #FFFFFF;
-   background-color: #CD5C5C;
+   background-color: #DAA520;
    font-weight: bold;
    padding: 15px
 }
 
 h2 {
-   color: #FFFFFF;
-   background-color: #F08080;
+   color: #000000;
+   background-color: #FFD700;
    font-weight: bold;
    padding: 10px
 }
@@ -94,7 +94,7 @@ latest_data %>%
        caption = "Source: Observational logs",
        x = "Motivation",
        y = "Number of survey")
+
 ```
-
-
-![](https://c.tenor.com/-qBsG1HwR4oAAAAC/tenor.gif)
+       
+![](https://media1.tenor.com/m/WGbjS7CPhksAAAAd/walking-viralhog.gif)
